💄 fixed button alignment

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -27,10 +27,6 @@
 a {
     text-decoration: none;
     color: inherit;
-
-    &:visited, &:hover {
-        color: inherit;
-    }
 }
 
 button {
